--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,3 +1,4 @@
 FROM php:7.4-apache
+LABEL maintainer="Atriox Banished atriox.contacto@gmail.com"
 RUN docker-php-ext-install mysqli && docker-php-ext-enable mysqli
 RUN apt-get update && apt-get upgrade -y
