--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     db:
         container_name: db
         hostname: db
-        image: mariadb:10.7.8
+        image: mariadb:lts
         restart: always
         volumes:
             - db-data:/var/lib/mysql
@@ -35,7 +35,7 @@ services:
     pma:
         container_name: pma
         hostname: pma
-        image: phpmyadmin:5.2.1
+        image: phpmyadmin:5.2.1-fpm-alpine
         restart: always
         depends_on:
             - db
